--- a/PPCRental_Project/PPCRental_Project/Web.config
+++ b/PPCRental_Project/PPCRental_Project/Web.config
@@ -44,6 +44,8 @@
   </runtime>
   <connectionStrings>
     <add name="DemoPPCRentalEntities" connectionString="metadata=res://*/Models.PPCModel.csdl|res://*/Models.PPCModel.ssdl|res://*/Models.PPCModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=KIETNGUYEN-PC\SQLEXPRESS;initial catalog=DemoPPCRental;user id=sa;password=123456;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="PPCRentalEntities" connectionString="metadata=res://*/Models.PPCRentalAWS.csdl|res://*/Models.PPCRentalAWS.ssdl|res://*/Models.PPCRentalAWS.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=ppcrentalmodel.cg5hydwnm2wp.us-west-2.rds.amazonaws.com;initial catalog=PPCRental;user id=sa;password=Xuanloc0;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="DemoPPCRentalEntities1" connectionString="metadata=res://*/Models.PPCRental.csdl|res://*/Models.PPCRental.ssdl|res://*/Models.PPCRental.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=KIETNGUYEN-PC\SQLEXPRESS;initial catalog=DemoPPCRental;user id=sa;password=123456;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
