Updata Model and Search

--- a/PPCRental_Project/PPCRental_Project/PPCRental_Project.csproj
+++ b/PPCRental_Project/PPCRental_Project/PPCRental_Project.csproj
@@ -119,8 +119,8 @@
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
-    <Compile Include="Controllers\DetailController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\ProjectController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -158,9 +158,6 @@
       <DependentUpon>PPCRental.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\STREET.cs">
-      <DependentUpon>PPCRental.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Models\sysdiagrams.cs">
       <DependentUpon>PPCRental.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\USER.cs">
@@ -232,7 +229,8 @@
     <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Scripts\jquery-1.10.2.min.map" />
-    <Content Include="Views\Detail\Detail.cshtml" />
+    <Content Include="Views\Project\Detail.cshtml" />
+    <Content Include="Views\Project\Search.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
