Update file hinh part2

--- a/PPCRental_Project/PPCRental_Project/PPCRental_Project.csproj
+++ b/PPCRental_Project/PPCRental_Project/PPCRental_Project.csproj
@@ -178,22 +178,37 @@
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
+    <Content Include="Images\1.9SC_9220-watermark.jpg" />
     <Content Include="Images\1.jpg" />
     <Content Include="Images\2.jpg" />
     <Content Include="Images\3.jpg" />
+    <Content Include="Images\DSC_1103-watermark.jpg" />
+    <Content Include="Images\DSC_7239-watermark.jpg" />
+    <Content Include="Images\DSC_7383-watermark.jpg" />
+    <Content Include="Images\DSC_7487-watermark.jpg" />
+    <Content Include="Images\DSC_7895-watermark.jpg" />
+    <Content Include="Images\galaxy-9-3-watermark-1.jpg" />
     <Content Include="Images\IMG_1592-stamp.jpg" />
     <Content Include="Images\MandT_486.jpg" />
+    <Content Include="Images\pearl-plaza-pool-2-watermark.jpg" />
     <Content Include="Images\PIS01258.jpg" />
+    <Content Include="Images\PIS2080.jpg" />
     <Content Include="Images\PIS3280-Edit-stamp.jpg" />
     <Content Include="Images\PIS3611.jpg" />
+    <Content Include="Images\PIS7081-stamp.jpg" />
+    <Content Include="Images\PIS8581.jpg" />
+    <Content Include="Images\PIS_4560.jpg" />
     <Content Include="Images\PIS_4622-Edit.jpg" />
     <Content Include="Images\PIS_6656-Edit-stamp.jpg" />
+    <Content Include="Images\PIS_6656.jpg" />
     <Content Include="Images\PIS_6706-Edit-stamp.jpg" />
+    <Content Include="Images\PIS_7003.jpg" />
     <Content Include="Images\PIS_7319-Edit-stamp.jpg" />
     <Content Include="Images\PIS_7389-Edit-stamp.jpg" />
     <Content Include="Images\PIS_7432-Edit-stamp.jpg" />
     <Content Include="Images\PPCRentalLogo.png" />
     <Content Include="Images\sunshine-benthanh-cityhome-10-stamp.jpg" />
+    <Content Include="Images\villa-7-watermark.jpg" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <EntityDeploy Include="Models\PPCRental.edmx">
