Upload file Admin

--- a/PPCRental_Project/PPCRental_Project/PPCRental_Project.csproj
+++ b/PPCRental_Project/PPCRental_Project/PPCRental_Project.csproj
@@ -235,6 +235,7 @@
     <Content Include="Images\PIS3611.jpg" />
     <Content Include="Images\PIS7081-stamp.jpg" />
     <Content Include="Images\PIS8581.jpg" />
+    <Content Include="Images\PIS_4560-Edit.jpg" />
     <Content Include="Images\PIS_4622-Edit.jpg" />
     <Content Include="Images\PIS_6656-Edit-stamp.jpg" />
     <Content Include="Images\PIS_6656.jpg" />
