--- a/PPCRental_Project/PPCRental_Project/PPCRental_Project.csproj
+++ b/PPCRental_Project/PPCRental_Project/PPCRental_Project.csproj
@@ -236,6 +236,7 @@
     <Content Include="Images\PIS3611.jpg" />
     <Content Include="Images\PIS7081-stamp.jpg" />
     <Content Include="Images\PIS8581.jpg" />
+    <Content Include="Images\PIS_15874.jpg" />
     <Content Include="Images\PIS_4560-Edit.jpg" />
     <Content Include="Images\PIS_4622-Edit.jpg" />
     <Content Include="Images\PIS_6656-Edit-stamp.jpg" />
@@ -248,7 +249,7 @@
     <Content Include="Images\PIS_7891.jpg" />
     <Content Include="Images\PPCRentalLogo.png" />
     <Content Include="Images\sunshine-benthanh-cityhome-10-stamp.jpg" />
-    <Content Include="Images\villa-7-watermark.jpg" />
+    <Content Include="Images\villa-7-watermark.jpg.jpg" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <EntityDeploy Include="Models\PPCRental.edmx">
