--- a/PPCRental_Project/PPCRental_Project/PPCRental_Project.csproj
+++ b/PPCRental_Project/PPCRental_Project/PPCRental_Project.csproj
@@ -221,17 +221,23 @@
     <Content Include="Images\2.jpg" />
     <Content Include="Images\3.jpg" />
     <Content Include="Images\DSC_1103-watermark.jpg" />
+    <Content Include="Images\DSC_4173-watermark.jpg" />
     <Content Include="Images\DSC_7239-watermark.jpg" />
     <Content Include="Images\DSC_7383-watermark.jpg" />
     <Content Include="Images\DSC_7487-watermark.jpg" />
     <Content Include="Images\DSC_7895-watermark.jpg" />
     <Content Include="Images\galaxy-9-3-watermark-1.jpg" />
+    <Content Include="Images\hinhpro171715580.jpg" />
     <Content Include="Images\IMG_1592-stamp.jpg" />
     <Content Include="Images\MandT_486.jpg" />
     <Content Include="Images\pearl-plaza-pool-2-watermark.jpg" />
     <Content Include="Images\PIS-15874.jpg" />
     <Content Include="Images\PIS01258.jpg" />
+    <Content Include="Images\PIS0429-stamp.jpg" />
+    <Content Include="Images\PIS0541-stamp.jpg" />
+    <Content Include="Images\PIS1882-stamp.jpg" />
     <Content Include="Images\PIS2080.jpg" />
+    <Content Include="Images\PIS3142-Edit-stamp.jpg" />
     <Content Include="Images\PIS3280-Edit-stamp.jpg" />
     <Content Include="Images\PIS3611.jpg" />
     <Content Include="Images\PIS7081-stamp.jpg" />
