--- a/PPCRental_Project/PPCRental_Project/PPCRental_Project.csproj
+++ b/PPCRental_Project/PPCRental_Project/PPCRental_Project.csproj
@@ -228,6 +228,7 @@
     <Content Include="Images\DSC_7895-watermark.jpg" />
     <Content Include="Images\galaxy-9-3-watermark-1.jpg" />
     <Content Include="Images\hinhpro171715580.jpg" />
+    <Content Include="Images\ImagesNull.png" />
     <Content Include="Images\IMG_1592-stamp.jpg" />
     <Content Include="Images\MandT_486.jpg" />
     <Content Include="Images\pearl-plaza-pool-2-watermark.jpg" />
@@ -242,6 +243,7 @@
     <Content Include="Images\PIS3611.jpg" />
     <Content Include="Images\PIS7081-stamp.jpg" />
     <Content Include="Images\PIS8581.jpg" />
+    <Content Include="Images\PISPROJECTABC.jpg" />
     <Content Include="Images\PIS_15874.jpg" />
     <Content Include="Images\PIS_4560-Edit.jpg" />
     <Content Include="Images\PIS_4622-Edit.jpg" />
