--- a/PPCRental_Project/PPCRental_Project/Web.config
+++ b/PPCRental_Project/PPCRental_Project/Web.config
@@ -16,6 +16,7 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <system.web>
+    <globalization fileEncoding="utf-8" />
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
   </system.web>
