Create About Us

--- a/PPCRental_Project/PPCRental_Project/PPCRental_Project.csproj
+++ b/PPCRental_Project/PPCRental_Project/PPCRental_Project.csproj
@@ -120,6 +120,7 @@
     <Folder Include="Areas\Admin\Models\" />
     <Folder Include="Areas\Agency\Models\" />
     <Folder Include="Areas\Agency\Views\Shared\" />
+    <Folder Include="Content\wp-content\themes\vpwtheme\css\images\" />
     <Folder Include="MultiImages\" />
   </ItemGroup>
   <ItemGroup>
@@ -220,6 +221,53 @@
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\loginstyle.css" />
     <Content Include="Content\wow.min.js" />
+    <Content Include="Content\wp-content\plugins\contact-form-7\images\ajax-loader.gif" />
+    <Content Include="Content\wp-content\plugins\contact-form-7\includes\css\styles.css" />
+    <Content Include="Content\wp-content\plugins\contact-form-7\includes\js\jquery.form.min.js" />
+    <Content Include="Content\wp-content\plugins\contact-form-7\includes\js\scripts.js" />
+    <Content Include="Content\wp-content\themes\vpwtheme\css\respon.css" />
+    <Content Include="Content\wp-content\themes\vpwtheme\css\skel.css" />
+    <Content Include="Content\wp-content\themes\vpwtheme\css\style-normal.css" />
+    <Content Include="Content\wp-content\themes\vpwtheme\css\style-wide.css" />
+    <Content Include="Content\wp-content\themes\vpwtheme\css\style.css" />
+    <Content Include="Content\wp-content\themes\vpwtheme\css\style_font.css" />
+    <Content Include="Content\wp-content\themes\vpwtheme\css\superslides.css" />
+    <Content Include="Content\wp-content\themes\vpwtheme\css\voudoo-menu.css" />
+    <Content Include="Content\wp-content\themes\vpwtheme\flash\speaker1.swf" />
+    <Content Include="Content\wp-content\themes\vpwtheme\images\arrow_dow.png" />
+    <Content Include="Content\wp-content\themes\vpwtheme\images\arrow_up.png" />
+    <Content Include="Content\wp-content\themes\vpwtheme\images\bg_tran1.png" />
+    <Content Include="Content\wp-content\themes\vpwtheme\images\icon_fb.png" />
+    <Content Include="Content\wp-content\themes\vpwtheme\images\intro.jpg" />
+    <Content Include="Content\wp-content\themes\vpwtheme\images\Logo.png" />
+    <Content Include="Content\wp-content\themes\vpwtheme\images\one_.jpg" />
+    <Content Include="Content\wp-content\themes\vpwtheme\images\six.jpg" />
+    <Content Include="Content\wp-content\themes\vpwtheme\images\three.jpg" />
+    <Content Include="Content\wp-content\themes\vpwtheme\images\trans11.png" />
+    <Content Include="Content\wp-content\themes\vpwtheme\images\trans3.png" />
+    <Content Include="Content\wp-content\themes\vpwtheme\images\twos.jpg" />
+    <Content Include="Content\wp-content\themes\vpwtheme\images\vitri1.jpg" />
+    <Content Include="Content\wp-content\themes\vpwtheme\js\init.js" />
+    <Content Include="Content\wp-content\themes\vpwtheme\js\jquery.animate-enhanced.min.js" />
+    <Content Include="Content\wp-content\themes\vpwtheme\js\jquery.easing.1.3.js" />
+    <Content Include="Content\wp-content\themes\vpwtheme\js\jquery.js" />
+    <Content Include="Content\wp-content\themes\vpwtheme\js\jquery.min.js" />
+    <Content Include="Content\wp-content\themes\vpwtheme\js\jquery.poptrox.min.js" />
+    <Content Include="Content\wp-content\themes\vpwtheme\js\jquery.scrollex.min.js" />
+    <Content Include="Content\wp-content\themes\vpwtheme\js\jquery.scrolly.min.js" />
+    <Content Include="Content\wp-content\themes\vpwtheme\js\jquery.superslides.js" />
+    <Content Include="Content\wp-content\themes\vpwtheme\js\main.js" />
+    <Content Include="Content\wp-content\themes\vpwtheme\js\skel.min.js" />
+    <Content Include="Content\wp-content\themes\vpwtheme\js\voudoo-menu.js" />
+    <Content Include="Content\wp-content\themes\vpwtheme\style.css" />
+    <Content Include="Content\wp-content\uploads\2017\01\chtk.png" />
+    <Content Include="Content\wp-content\uploads\2017\01\lld.png" />
+    <Content Include="Content\wp-content\uploads\2017\01\logo2.png" />
+    <Content Include="Content\wp-content\uploads\2017\01\text_intro.png" />
+    <Content Include="Content\wp-content\uploads\2017\01\text_vt.png" />
+    <Content Include="Content\wp-includes\js\jquery\jquery-migrate.min.js" />
+    <Content Include="Content\wp-includes\js\jquery\jquery.js" />
+    <Content Include="Content\wp-includes\js\wp-embed.min.js" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
@@ -238,6 +286,7 @@
     <Content Include="Images\hinhpro171715580.jpg" />
     <Content Include="Images\ImagesNull.png" />
     <Content Include="Images\IMG_1592-stamp.jpg" />
+    <Content Include="Images\logo.png" />
     <Content Include="Images\MandT_486.jpg" />
     <Content Include="Images\pearl-plaza-pool-2-watermark.jpg" />
     <Content Include="Images\PIS-15874.jpg" />
@@ -355,6 +404,8 @@
     <Content Include="Areas\Agency\Views\PropertyAgency\Create.cshtml" />
     <Content Include="Areas\Admin\Views\Account\Login.cshtml" />
     <Content Include="Areas\Agency\Views\PropertyAgency\Index.cshtml" />
+    <Content Include="Content\wp-content\themes\vpwtheme\font\utm_helvetins-webfont.ttf" />
+    <Content Include="Content\wp-content\themes\vpwtheme\font\utm_helvetins-webfont.woff" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
