funtion sign up not message

--- a/PPCRental_Project/PPCRental_Project.AcceptanceTests/App.config
+++ b/PPCRental_Project/PPCRental_Project.AcceptanceTests/App.config
@@ -7,7 +7,7 @@
   </configSections>
   <specFlow>
     <!-- For additional details on SpecFlow configuration options see http://go.specflow.org/doc-config -->
-  </specFlow>
+  <!-- For additional details on SpecFlow configuration options see http://go.specflow.org/doc-config --><unitTestProvider name="NUnit" /></specFlow>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
     <providers>
