--- a/PPCRental_Project/PPCRental_Project/PPCRental_Project.csproj
+++ b/PPCRental_Project/PPCRental_Project/PPCRental_Project.csproj
@@ -237,16 +237,28 @@
     <Content Include="Content\wp-content\themes\vpwtheme\images\arrow_dow.png" />
     <Content Include="Content\wp-content\themes\vpwtheme\images\arrow_up.png" />
     <Content Include="Content\wp-content\themes\vpwtheme\images\bg_tran1.png" />
+    <Content Include="Content\wp-content\themes\vpwtheme\images\chtk.png" />
+    <Content Include="Content\wp-content\themes\vpwtheme\images\facebook.png" />
+    <Content Include="Content\wp-content\themes\vpwtheme\images\facebook_menu.png" />
+    <Content Include="Content\wp-content\themes\vpwtheme\images\google-plus.png" />
+    <Content Include="Content\wp-content\themes\vpwtheme\images\google-plus_menu.png" />
+    <Content Include="Content\wp-content\themes\vpwtheme\images\home.png" />
     <Content Include="Content\wp-content\themes\vpwtheme\images\icon_fb.png" />
     <Content Include="Content\wp-content\themes\vpwtheme\images\intro.jpg" />
+    <Content Include="Content\wp-content\themes\vpwtheme\images\linkedin.png" />
+    <Content Include="Content\wp-content\themes\vpwtheme\images\linkedin_menu.png" />
     <Content Include="Content\wp-content\themes\vpwtheme\images\Logo.png" />
+    <Content Include="Content\wp-content\themes\vpwtheme\images\mail.png" />
     <Content Include="Content\wp-content\themes\vpwtheme\images\one_.jpg" />
-    <Content Include="Content\wp-content\themes\vpwtheme\images\six.jpg" />
-    <Content Include="Content\wp-content\themes\vpwtheme\images\three.jpg" />
+    <Content Include="Content\wp-content\themes\vpwtheme\images\phone-call.png" />
+    <Content Include="Content\wp-content\themes\vpwtheme\images\printer.png" />
+    <Content Include="Content\wp-content\themes\vpwtheme\images\text_intro.png" />
     <Content Include="Content\wp-content\themes\vpwtheme\images\trans11.png" />
     <Content Include="Content\wp-content\themes\vpwtheme\images\trans3.png" />
+    <Content Include="Content\wp-content\themes\vpwtheme\images\twitter.png" />
+    <Content Include="Content\wp-content\themes\vpwtheme\images\twitter_menu.png" />
     <Content Include="Content\wp-content\themes\vpwtheme\images\twos.jpg" />
-    <Content Include="Content\wp-content\themes\vpwtheme\images\vitri1.jpg" />
+    <Content Include="Content\wp-content\themes\vpwtheme\images\whatsapp.png" />
     <Content Include="Content\wp-content\themes\vpwtheme\js\init.js" />
     <Content Include="Content\wp-content\themes\vpwtheme\js\jquery.animate-enhanced.min.js" />
     <Content Include="Content\wp-content\themes\vpwtheme\js\jquery.easing.1.3.js" />
@@ -260,11 +272,6 @@
     <Content Include="Content\wp-content\themes\vpwtheme\js\skel.min.js" />
     <Content Include="Content\wp-content\themes\vpwtheme\js\voudoo-menu.js" />
     <Content Include="Content\wp-content\themes\vpwtheme\style.css" />
-    <Content Include="Content\wp-content\uploads\2017\01\chtk.png" />
-    <Content Include="Content\wp-content\uploads\2017\01\lld.png" />
-    <Content Include="Content\wp-content\uploads\2017\01\logo2.png" />
-    <Content Include="Content\wp-content\uploads\2017\01\text_intro.png" />
-    <Content Include="Content\wp-content\uploads\2017\01\text_vt.png" />
     <Content Include="Content\wp-includes\js\jquery\jquery-migrate.min.js" />
     <Content Include="Content\wp-includes\js\jquery\jquery.js" />
     <Content Include="Content\wp-includes\js\wp-embed.min.js" />
