testpost chưa hoàn tất

--- a/PPCRental_Project/PPCRental_Project.AcceptanceTests/PPCRental_Project.AcceptanceTests.csproj
+++ b/PPCRental_Project/PPCRental_Project.AcceptanceTests/PPCRental_Project.AcceptanceTests.csproj
@@ -86,8 +86,14 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Filter.feature</DependentUpon>
     </Compile>
+    <Compile Include="Feature\PostProject.feature.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>PostProject.feature</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Steps\FilterSteps.cs" />
+    <Compile Include="Steps\UC4_PostProject.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -95,10 +101,17 @@
       <Generator>SpecFlowSingleFileGenerator</Generator>
       <LastGenOutput>Filter.feature.cs</LastGenOutput>
     </None>
+    <None Include="Feature\PostProject.feature">
+      <Generator>SpecFlowSingleFileGenerator</Generator>
+      <LastGenOutput>PostProject.feature.cs</LastGenOutput>
+    </None>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Driver\Home\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
